[elf] elf_h forked from elf_g. elf_g remains the recommended stable version of elf.  2 months old today. elf_h is the unstable development head. Dusted TODO.  elf_g now uses its own copy of STD_red.
git-svn-id: http://svn.pugscode.org/pugs@22331 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elf/README
+++ b/misc/elf/README
@@ -16,7 +16,6 @@ P6 scripts:
   $ ./say 3
   3
 
-
 INSTALL
 
 The elf executable is generic perl 5.
@@ -32,7 +31,7 @@ STD_red requires ruby 1.9.  See it's README for installation info.
 
 RUNNING TESTS
 
-  See  make test  in elf_g_src/Makefile.
+  See  elf_g_src/Makefile.
 
 VERSIONS
 
@@ -47,6 +46,13 @@ TIPS
     eval_perl5('sub{print Data::Dumper::Dumper($_[0])}').($n);
 
 OTHER
+
+Other directories which may be of interest:
+misc/STD_red
+misc/elfish/STD_blue
+misc/elfish/on_sbcl
+misc/elfish/rx_on_re
+
 
 A development story (a tale of two compilers)
 
