[elf] Finished elf_h fork.  Tweaked IR.  Updated test results.
git-svn-id: http://svn.pugscode.org/pugs@22341 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elf/elf_h_src/README
+++ b/misc/elf/elf_h_src/README
@@ -2,4 +2,4 @@ See ../README .
 
 
 # Fastest way to test a modified emitter...
-../elf_g EmitSimpleP5.pm -v -e 'test new emitter'
+../elf_h EmitSimpleP5.pm -v -e 'test new emitter'
